--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
+        "laravel/telescope": "^5.15",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3"
@@ -72,8 +73,10 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
-        }
+            "dont-discover": [
+                "laravel/telescope"
+            ]
+    }
     },
     "config": {
         "optimize-autoloader": true,
